force-app/main/default/objects/Purchase_Order__c/fields/Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total__c</fullName>
    <label>Grand Total</label>
    <summarizedField>PO_Item__c.Total_inc_Tax__c</summarizedField>
    <summaryForeignKey>PO_Item__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>