force-app/main/default/objects/Purchase_Order__c/fields/No_of_Products__c.field-meta.xml
<CustomField>
    <fullName>No_of_Products__c</fullName>
    <label>No of Products</label>
    <summaryForeignKey>PO_Item__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>