force-app/main/default/objects/Purchase_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Partially Fulfilled</fullName>
            </value>
            <value>
                <fullName>Fulfilled</fullName>
            </value>
            <value>
                <fullName>Invoiced</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <isActive>false</isActive>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Drafted</fullName>
                <isActive>false</isActive>
                <label>Drafted</label>
            </value>
            <value>
                <fullName>Sent to vendor</fullName>
                <isActive>false</isActive>
                <label>Sent to vendor</label>
            </value>
            <value>
                <fullName>Stock Received</fullName>
                <isActive>false</isActive>
                <label>Stock Received</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>