force-app/main/default/objects/Purchase_Order__c/fields/Vendor_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Invoice_Number__c</fullName>
    <label>Vendor Invoice Number</label>
    <type>Date</type>
</CustomField>